--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint ./src",
     "test": "jest",
-    "build":"babel src -d dist"
+    "build": "babel src -d dist"
   },
   "author": "vyacheslavmiroshnik",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.20.2",
     "eslint": "^8.37.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "jest": "^29.5.0"
   },
   "dependencies": {
